# VulkanAPI-cpp-learning

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Compilation/: build_project.ps1  build_shaders.ps1
Learning/Include/: VulkanApp.h  VulkanCore.h  VulkanDevice.h  VulkanLogger.h  VulkanRenderer.h  VulkanSwapChain.h  VulkanUtils.h
Learning/Shaders/: triangle.frag  triangle.vert
Learning/Source/: VulkanApp.cpp  VulkanCore.cpp  VulkanDevice.cpp  VulkanLogger.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp  VulkanUtils.cpp  main.cpp
docs/: VulkanAPI_Learning_Guide.md  VulkanAPI_Learning_Tasks.md
